fix body height for IE

--- a/soccer/index.html
+++ b/soccer/index.html
@@ -13,7 +13,7 @@
     <title>SOCcer - Standardized Occupation Coding for Computer-assisted Epidemiological Research</title>
 </head>
 
-<body class="d-flex flex-column bg-light">
+<body class="d-flex flex-column bg-light vh-100">
     <header>
         <a href="#main" class="sr-only sr-only-focusable text-white bg-primary-dark text-center py-2 d-block">Skip to main content</a>
         <div class="container px-0">
