--- a/soccer/index.html
+++ b/soccer/index.html
@@ -5,12 +5,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-    <script src="https://assets.adobedtm.com/f1bfa9f7170c81b1a9a9ecdcc6c5215ee0b03c84/satelliteLib-4b219b82c4737db0e1797b6c511cf10c802c95cb.js"></script>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-62346354-5"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="static/css/style.css">
     <link rel="icon" href="favicon.ico">
     <title>SOCcer - Standardized Occupation Coding for Computer-assisted Epidemiological Research</title>
+
+
+    <script src="https://assets.adobedtm.com/f1bfa9f7170c81b1a9a9ecdcc6c5215ee0b03c84/satelliteLib-4b219b82c4737db0e1797b6c511cf10c802c95cb.js"></script>
+    <script src="https://www.googletagmanager.com/gtag/js?id=UA-62346354-5" async></script>
+    <script src="static/js/analytics.js"></script>
+
 </head>
 
 <body class="d-flex flex-column bg-light vh-100">
@@ -410,25 +414,8 @@
         </div>
     </footer>
 
-
-    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.js"></script>
+    <script src="https://cdn.jsdelivr.net/combine/npm/jquery@3.3.1,npm/bootstrap@4.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="static/js/soccer.js"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-        gtag('js', new Date());
-        gtag('config', 'UA-62346354-5');
-
-    </script>
-    <script>
-        _satellite.pageBottom();
-
-    </script>
-
 </body>
 
 </html>
