--- a/soccer/index.html
+++ b/soccer/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="static/css/style.css">
     <link rel="icon" href="favicon.ico">
     <title>SOCcer - Standardized Occupation Coding for Computer-assisted Epidemiological Research</title>
-    <script src="https://assets.adobedtm.com/f1bfa9f7170c81b1a9a9ecdcc6c5215ee0b03c84/satelliteLib-4b219b82c4737db0e1797b6c511cf10c802c95cb.js"></script>
+    <script src="https://assets.adobedtm.com/f1bfa9f7170c81b1a9a9ecdcc6c5215ee0b03c84/satelliteLib-4b219b82c4737db0e1797b6c511cf10c802c95cb.js" async></script>
     <script src="https://www.googletagmanager.com/gtag/js?id=UA-62346354-5" async></script>
     <script src="static/js/analytics.js"></script>
 </head>
