--- a/soccer/index.html
+++ b/soccer/index.html
@@ -106,60 +106,59 @@
             <div class="row p-0">
                 <!-- Left Panel -->
                 <div class="col-md-4">
-                    <form id="soccer-form" class="h-100 border p-3">
-                        <div class="border p-2 mb-3">
-                            <div class="form-group form-inline">
-                                <label class="mr-1" for="model-version">SOCcer Model:</label>
-                                <select id="model-version" name="model-version" class="mr-1 form-control form-control-sm">
+                    <form id="soccer-form" class="h-100 shadow-light rounded">
+                        <div class="p-3">
+
+                            <div class="form-group">
+                                <div class="d-flex align-items-center mb-1">
+                                    <label class="font-weight-semibold m-0" for="model-version"> SOCcer Model
+                                    </label>
+                                    <img tabindex="0" data-trigger="focus" data-toggle="popover" title="Model: SOCcer" data-content="Features: Job Title, SIC, Job Tasks" class="cursor-pointer ml-2" src="static/img/icons/info-circle.svg" height="16" width="16" alt="info circle" />
+                                </div>
+                                <select id="model-version" name="model-version" class="form-control">
                                     <option value="1">model v1.0</option>
                                     <option value="2">model v2.0</option>
                                 </select>
-
-                                <span tabindex="0" data-trigger="focus" data-toggle="popover" title="Model: SOCcer" data-content="Features: Job Title, SIC, Job Tasks" class="d-flex align-items-center cursor-pointer">
-                                    <img src="static/img/icons/info-circle.svg" height="20" width="20" alt="info circle" />
-                                </span>
                             </div>
 
                             <div class="form-group">
-                                <label for="input-file">
-                                    Input File:
-                                    <span class="small font-italic text-nowrap">
+                                <label for="input-file" class="mb-1">
+                                    <span class="font-weight-semibold mr-2">Input File</span>
+                                    <span class="small font-italic text-nowrap ml-auto">
                                         <a href="static/files/example1.csv" download>Example 1</a>
                                         <a href="static/files/example2.csv" download>Example 2</a>
                                     </span>
                                 </label>
                                 <input class="small d-block mb-1" type="file" id="input-file" name="input-file" accept=".csv" required>
                                 <div class="small text-dark font-italic" id="input-file-description"></div>
+
+                                <div class="progress my-1">
+                                    <div id="upload-progress" class="progress-bar progress-bar-striped bg-primary" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
+                                </div>
                             </div>
 
-                            <div class="progress mb-2">
-                                <div id="upload-progress" class="progress-bar progress-bar-striped bg-primary" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
-                            </div>
-
-                        </div>
-
-                        <div class="form-group border p-2">
                             <div class="custom-control custom-checkbox mb-2">
                                 <input type="checkbox" class="custom-control-input" id="submit-queue">
                                 <label class="custom-control-label" for="submit-queue">Submit this job to a queue</label>
                             </div>
 
-                            <label class="mb-1 font-weight-bold" for="email">Email address</label>
+                            <hr class="mt-0 mb-1">
+
+                            <label class="mb-1 font-weight-semibold" for="email">Email address</label>
                             <input type="email" class="form-control" id="email" name="email" placeholder="Enter email">
                             <p class="my-2 font-italic text-muted" id="queue-description"></p>
+                            <input type="hidden" name="file-id" id="file-id">
                         </div>
 
-                        <input type="hidden" name="file-id" id="file-id">
-
-                        <div class="text-right">
-                            <button type="submit" id="submit" class="btn btn-primary">Submit</button>
-                            <button type="button" id="loading" class="btn btn-primary" style="display: none" disabled>
+                        <div class="text-right bg-light p-3 rounded-bottom">
+                            <button type="reset" id="reset" class="btn btn-outline-light text-dark font-weight-semibold">Reset</button>
+                            <button type="submit" id="submit" class="btn btn-primary font-weight-semibold">Submit</button>
+                            <button type="button" id="loading" class="btn btn-primary  font-weight-semibold" style="display: none" disabled>
                                 <span class=" d-flex align-items-center">
                                     <img class="spinner mr-2" src="static/img/icons/spinner-third.svg" alt="loading" height="20" width="20" />
                                     Processing
                                 </span>
                             </button>
-                            <button type="reset" id="reset" class="btn btn-outline-dark">Reset</button>
                         </div>
                     </form>
                 </div>
@@ -167,7 +166,7 @@
 
                 <!-- Right Panel -->
                 <div class="col-md-8">
-                    <div class="h-100 border p-2">
+                    <div class="h-100 rounded shadow-light p-2">
                         <div id="alerts" class="mb-4"></div>
                         <div id="results-container" style="display: none">
                             <div class="mb-2 text-center">
