--- a/soccer/index.html
+++ b/soccer/index.html
@@ -106,7 +106,7 @@
             <div class="row p-0">
                 <!-- Left Panel -->
                 <div class="col-md-4">
-                    <form id="soccer-form" class="h-100 shadow-light rounded">
+                    <form id="soccer-form" class="h-100 shadow-light rounded d-flex flex-column justify-content-between">
                         <div class="p-3">
 
                             <div class="form-group">
