--- a/soccer/index.html
+++ b/soccer/index.html
@@ -152,12 +152,9 @@
 
                         <div class="text-right bg-light p-3 rounded-bottom">
                             <button type="reset" id="reset" class="btn btn-outline-light text-dark font-weight-semibold">Reset</button>
-                            <button type="submit" id="submit" class="btn btn-primary font-weight-semibold">Submit</button>
-                            <button type="button" id="loading" class="btn btn-primary  font-weight-semibold" style="display: none" disabled>
-                                <span class=" d-flex align-items-center">
-                                    <img class="spinner mr-2" src="static/img/icons/spinner-third.svg" alt="loading" height="20" width="20" />
-                                    Processing
-                                </span>
+                            <button type="submit" id="submit" class="btn btn-primary font-weight-semibold d-flex-inline align-items-center">
+                                <span class="mr-2">Submit</span>
+                                <img id="loading" style="display: none" class="spinner" src="static/img/icons/spinner-third.svg" alt="loading" height="16" width="16" />
                             </button>
                         </div>
                     </form>
