--- a/soccer/index.html
+++ b/soccer/index.html
@@ -123,7 +123,7 @@
 
                             <div class="form-group">
                                 <label for="input-file" class="mb-1">
-                                    <span class="font-weight-semibold mr-2">Input File</span>
+                                    <span class="font-weight-semibold mr-1">Input File</span>
                                     <span class="small font-italic text-nowrap ml-auto">
                                         <a href="static/files/example1.csv" download>Example 1</a>
                                         <a href="static/files/example2.csv" download>Example 2</a>
@@ -144,7 +144,7 @@
 
                             <hr class="mt-0 mb-1">
 
-                            <label class="mb-1 font-weight-semibold" for="email">Email address</label>
+                            <label class="mb-1 font-weight-semibold" for="email">Email Address</label>
                             <input type="email" class="form-control" id="email" name="email" placeholder="Enter email">
                             <p class="my-2 font-italic text-muted" id="queue-description"></p>
                             <input type="hidden" name="file-id" id="file-id">
@@ -153,8 +153,8 @@
                         <div class="text-right bg-light p-3 rounded-bottom">
                             <button type="reset" id="reset" class="btn btn-outline-light text-dark font-weight-semibold">Reset</button>
                             <button type="submit" id="submit" class="btn btn-primary font-weight-semibold d-flex-inline align-items-center">
-                                <span class="mr-2">Submit</span>
-                                <img id="loading" style="display: none" class="spinner" src="static/img/icons/spinner-third.svg" alt="loading" height="16" width="16" />
+                                Submit
+                                <img id="loading" style="display: none" class="spinner ml-2" src="static/img/icons/spinner-third.svg" alt="loading" height="16" width="16" />
                             </button>
                         </div>
                     </form>
